--- a/src/android/build-extras.gradle
+++ b/src/android/build-extras.gradle
@@ -10,7 +10,7 @@ android {
 	}
 
 	dependencies {
-		implementation ('org.jitsi.react:jitsi-meet-sdk:3.+') { transitive = true }
+		implementation ('org.jitsi.react:jitsi-meet-sdk:3.10.2') { transitive = true }
 	}
 
 	compileOptions {
